<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            app:title="Discover"
            app:titleCentered="true"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner"/>

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_gravity="bottom|center"
                    app:dotsWidthFactor="1.0"
                    app:selectedDotColor="@color/colorAccent"
                    app:progressMode="false"
                    />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBstPopularMoviesAndSerialsLabel"
                android:text="@string/lbl_best_popular_films_and_serials"
                android:textColor="@color/colorSecondaryText"
                android:layout_below="@id/flBanner"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <include
                android:id="@+id/vpBestPopularMovieList"
                android:layout_below="@id/tvBstPopularMoviesAndSerialsLabel"
                layout="@layout/view_pod_movie_list"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTime"
                android:layout_below="@id/vpBestPopularMovieList"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_height="@dimen/height_check_movie_showtime"
                android:backgroundTint="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowTimeLabel"
                    android:text="@string/lbl_check_movie_n_show_times"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_medium_3"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimeLocation"
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24dp"/>
            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_below="@id/rlCheckMovieShowTime"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:background = "@color/colorPrimary"
                app:tabTextColor="@color/colorSecondaryText"
                app:tabSelectedTextColor="@color/white"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@+id/flMovieByGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabLayoutGenre"
                android:background="@color/colorPrimaryDark">

                <include
                    android:id="@+id/vpMoviesByGenre"
                    layout="@layout/view_pod_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flMovieByGenre"
                android:text="@string/lbl_showcases"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:textColor="@color/colorSecondaryText"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tvShowCaseLabel"
                android:layout_alignParentEnd="true"
                android:text="@string/lbl_more_showcases"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowcases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin_card_medium_2"
                android:layout_marginTop="@dimen/margin_card_medium_2"
                android:layout_below="@id/tvShowCaseLabel"
                />

            <include
                android:id="@+id/vpActorHomeScreen"
                layout="@layout/view_pod_actor_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvShowcases"
                android:layout_marginTop="17dp" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>